[package]
name = "avabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["miraie/native-tls", "reqwest/native-tls", "biliapi/native-tls"]
rustls = ["miraie/rustls", "reqwest/rustls-tls", "biliapi/rustls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3"
log = "0.4.14"
log4rs = "1.0.0"
anyhow = "=1.0.44"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
regex = "1.5.4"
rand = "0.8.4"
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.8.0"

serde = "1.0.126"
serde_yaml = "0.8.17"
serde_json = "1.0.64"

# api
biliapi = { version = "*", default-features = false }

# data
sled = "0.34.7"

# 日报
gen-article = { git = "https://github.com/gwy15/asoul-weekly" }
# gen-article = { path = "../asoul-related/asoul-weekly-bot/gen-article" }

[dev-dependencies]
pretty_env_logger = "0.4.0"
tempfile = "3.2.0"

[dependencies.miraie]
version = "0.2.0-beta.2"
default-features = false
features = []

[dependencies.reqwest]
version = "0.11.7"
default-features = false
features = ["json", "gzip", "deflate", "brotli"]
